--- a/CVoffline/resume.css
+++ b/CVoffline/resume.css
@@ -11,19 +11,20 @@
 */
 
 
+
 .msg { padding: 10px; background: #222; position: relative; }
 .msg h1 { color: #fff;  }
 .msg a { margin-left: 20px; background: #408814; color: white; padding: 4px 8px; text-decoration: none; }
 .msg a:hover { background: #266400; }
 
 /* //-- yui-grids style overrides -- */
-body { font-family: Georgia; color: #444; }
+body { font-family:'Helvetica'; color: #444; }
 #inner { padding: 10px 80px; margin: 80px auto; background: #f5f5f5; border: solid #666; border-width: 8px 0 2px 0; }
 .yui-gf { margin-bottom: 2em; padding-bottom: 2em; border-bottom: 1px solid #ccc; }
 
 /* //-- header, body, footer -- */
 #hd { margin: 2.5em 0 3em 0; padding-bottom: 1.5em; border-bottom: 1px solid #ccc }
-#hd h2 { text-transform: uppercase; letter-spacing: 2px; }
+#hd h2 { text-transform: uppercase; letter-spacing: 2px; font-style: italic; }
 #bd, #ft { margin-bottom: 2em; }
 
 /* //-- footer -- */
@@ -31,7 +32,7 @@ body { font-family: Georgia; color: #444; }
 #ft p { margin-bottom: 0; text-align: center;   }
 
 /* //-- core typography and style -- */
-#hd h1 { font-size: 48px; text-transform: uppercase; letter-spacing: 3px; }
+#hd h1 { font-size: 48px; text-transform: uppercase; letter-spacing: 3px; font-weight: 600; }
 h2 { font-size: 152% }
 h3, h4 { font-size: 122%; }
 h1, h2, h3, h4 { color: #333; }
@@ -43,7 +44,7 @@ li { line-height: 24px; border-bottom: 1px solid #ccc; }
 p.enlarge { font-size: 144%; padding-right: 6.5em; line-height: 24px; }
 p.enlarge span { color: #000 }
 .contact-info { margin-top: 7px; }
-.first h2 { font-style: italic; }
+.first h2 { font-weight: 600; }
 .last { border-bottom: 0 }
 
 
@@ -52,9 +53,14 @@ p.enlarge span { color: #000 }
 a#pdf { display: block; float: left; background: #666; color: white; padding: 6px 50px 6px 12px; margin-bottom: 6px; text-decoration: none;  }
 a#pdf:hover { background: #222; }
 
-.job { position: relative; margin-bottom: 1em; padding-bottom: 1em; border-bottom: 1px solid #ccc; }
-.job h4 { position: absolute; top: 0.35em; right: 0 }
+.job { position: relative; margin-bottom: 1em; border-bottom: 1px solid #ccc; }
+.job h4 { position: absolute; top: 0.35em; right: 0; font-style: italic; }
 .job p { margin: 0.75em 0 3em 0; }
+.job h2{ font-weight: 600; }
+.job h3{ font-style: italic; margin-top:5px }
+.job:last-of-type{
+    border-bottom: none;
+}
 
 .last { border: none; }
 .skills-list {  }
@@ -71,4 +77,38 @@ a#pdf:hover { background: #222; }
 .yui-gf .yui-u{width:80.2%;}
 .yui-gf div.first{width:12.3%;}
 
-
+#_HocVan_ h3{
+    margin-top:5px;
+    font-style: italic;
+}
+#_KyNangMem_{
+    margin-left:16px;
+}
+#_KyNangMem_ li{
+    /* list-style-type: disc; */
+    border-bottom: none;
+}
+#_KiNang_ ul{
+    /* margin-left:16px; */
+}
+#_KiNang_ li{
+    border-bottom: none;
+    /* list-style-type: disc; */
+}
+#_KiNang_ h3{
+    display: inline-block;
+    font-weight: 600;
+    margin-right: 10px;
+}
+#_KiNang_ h3:last-child{
+    display: block;
+}
+.Languages p{
+    display: inline-block;
+    margin-right: 0px;
+    padding-right: 10px;
+    /* display: flex; */
+}
+.Languages .bangcap{
+    /* font-weight: 600; */
+}
