--- a/CVoffline/resume.css
+++ b/CVoffline/resume.css
@@ -1,14 +1,3 @@
-/*
----------------------------------------------------------------------------------
-	STRIPPED DOWN RESUME TEMPLATE
-    html resume
-
-    v0.9: 5/28/09
-
-    design and code by: thingsthatarebrown.com 
-                        (matt brown)
----------------------------------------------------------------------------------
-*/
 
 
 
@@ -17,21 +6,20 @@
 .msg a { margin-left: 20px; background: #408814; color: white; padding: 4px 8px; text-decoration: none; }
 .msg a:hover { background: #266400; }
 
-/* //-- yui-grids style overrides -- */
-body { font-family:'Helvetica'; color: #444; }
-#inner { padding: 10px 80px; margin: 80px auto; background: #f5f5f5; border: solid #666; border-width: 8px 0 2px 0; }
+#doc2 { 
+    font-family:'Helvetica' !important ; color: #444; position: absolute; left:50%; transform: translateX(-50%); 
+    overflow: hidden;
+}
+#inner { padding: 10px 80px; margin: 0; background: #f5f5f5; border: solid #666; border-width: 8px 0 2px 0; }
 .yui-gf { margin-bottom: 2em; padding-bottom: 2em; border-bottom: 1px solid #ccc; }
 
-/* //-- header, body, footer -- */
 #hd { margin: 2.5em 0 3em 0; padding-bottom: 1.5em; border-bottom: 1px solid #ccc }
 #hd h2 { text-transform: uppercase; letter-spacing: 2px; font-style: italic; }
 #bd, #ft { margin-bottom: 2em; }
 
-/* //-- footer -- */
 #ft { padding: 1em 0 5em 0; font-size: 92%; border-top: 1px solid #ccc; text-align: center; }
 #ft p { margin-bottom: 0; text-align: center;   }
 
-/* //-- core typography and style -- */
 #hd h1 { font-size: 48px; text-transform: uppercase; letter-spacing: 3px; font-weight: 600; }
 h2 { font-size: 152% }
 h3, h4 { font-size: 122%; }
@@ -44,19 +32,18 @@ li { line-height: 24px; border-bottom: 1px solid #ccc; }
 p.enlarge { font-size: 144%; padding-right: 6.5em; line-height: 24px; }
 p.enlarge span { color: #000 }
 .contact-info { margin-top: 7px; }
-.first h2 { font-weight: 600; }
+.first h2 { font-weight: 600; font-size: 20px; }
 .last { border-bottom: 0 }
 
 
-/* //-- section styles -- */
 
 a#pdf { display: block; float: left; background: #666; color: white; padding: 6px 50px 6px 12px; margin-bottom: 6px; text-decoration: none;  }
 a#pdf:hover { background: #222; }
 
 .job { position: relative; margin-bottom: 1em; border-bottom: 1px solid #ccc; }
-.job h4 { position: absolute; top: 0.35em; right: 0; font-style: italic; }
+.job h4 { position: absolute; top: 0; right: 0; font-style: italic; }
 .job p { margin: 0.75em 0 3em 0; }
-.job h2{ font-weight: 600; }
+.job h2{ font-weight: 600; text-align: left; }
 .job h3{ font-style: italic; margin-top:5px }
 .job:last-of-type{
     border-bottom: none;
@@ -73,7 +60,6 @@ a#pdf:hover { background: #222; }
 #srt-ttab { margin-bottom: 100px; text-align: center;  }
 #srt-ttab img.last { margin-top: 20px }
 
-/* --// override to force 1/8th width grids -- */
 .yui-gf .yui-u{width:80.2%;}
 .yui-gf div.first{width:12.3%;}
 
@@ -85,15 +71,12 @@ a#pdf:hover { background: #222; }
     margin-left:16px;
 }
 #_KyNangMem_ li{
-    /* list-style-type: disc; */
     border-bottom: none;
 }
 #_KiNang_ ul{
-    /* margin-left:16px; */
 }
 #_KiNang_ li{
     border-bottom: none;
-    /* list-style-type: disc; */
 }
 #_KiNang_ h3{
     display: inline-block;
@@ -107,8 +90,25 @@ a#pdf:hover { background: #222; }
     display: inline-block;
     margin-right: 0px;
     padding-right: 10px;
-    /* display: flex; */
 }
 .Languages .bangcap{
-    /* font-weight: 600; */
+}
+
+
+.overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background:white;
+    text-align: center;
+}
+.overlay p {
+    font-size: 18px;
+    margin-top: 50px;
+}
+.overlay p span{
+    display: block;
+    margin-top: 10px;
+    color: #00000099;
 }
